--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
 </head>
 <body>
 
-  <!-- Write your HTML in this file -->
+  <ul>
+  <li>Sandwiches
+    <ul>
+      <li>Ham and Cheese</li>
+      <li>Grilled Cheese</li>
+    </ul>
+  </li>
 
 </body>
 </html>
