Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 <body>
 
   <ul>
-  <li>Sandwiches
+  <li>Making a Grilled Cheese: Ingredients
     <ul>
       <li>Ham and Cheese</li>
       <li>Grilled Cheese</li>
     </ul>
   </li>
+  </ul>
 
 </body>
 </html>
