--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <ul>
   <li>Making a Grilled Cheese: Ingredients
     <ul>
-      <li>Ham and Cheese</li>
-      <li>Grilled Cheese</li>
+      <li>2 slices of bread</li>
+      <li>4 slices of cheese</li>
     </ul>
   </li>
   </ul>
