Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       <li>2 slices of bread</li>
       <li>4 slices of cheese
         <ul>cheddar</ul>
+        <ul>mozzarella</ul>
+        <ul>pepperjack</ul>
+        <ul>gouda</ul>
       
       </li>
       <li>1 tbsp of butter</li>
